# seeds-planner

./: .gitignore  README.md  main.py  pyproject.toml
api/: benchmark_results.json  main.py  schemas.py  service.py
docs/: architecture.drawio
optimizer/: benchmark.py  cli.py  context.py  data.py  result.py
optimizer/classes/: garden_data.py  plant_info.py
optimizer/models/: __init__.py  base.py  cmopso.py  ctaea.py  nsga2.py  nsga2_initial.py  nsga2_quantity.py  nsga3.py  problem.py  pulp_model.py
optimizer/utils/: cli.py  deduplication.py  fs.py  pairs.py  parsing.py
scraper/: cli.py  client.py  companions.py  config.py  storage.py
web/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts  types.ts
web/src/components/: GardenSvg.tsx  HypervolumePlot.tsx  ParetoPlot.tsx  ParetoPlot3D.tsx  PlantPicker.tsx  PlotBuilder.tsx  ResultsView.tsx
web/src/components/ui/: button.tsx  card.tsx  input.tsx  select.tsx
web/src/hooks/: useLocalStorage.ts  useStreamingOptimize.ts
web/src/pages/: Optimizer.tsx
