[project]
name = "seeds-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "pymoo>=0.6",
    "numpy>=1.24",
    "black>=26.3.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper", "optimizer", "api"]

[project.scripts]
seeds-scraper = "scraper.cli:main"
seeds-optimizer = "optimizer.cli:main"
seeds-api = "api.main:run"
